fix: membersWrap overflowing

--- a/src/scss/components/_right-bar-container.scss
+++ b/src/scss/components/_right-bar-container.scss
@@ -7,6 +7,7 @@
   margin: 10px 10px 10px 0;
   border-radius: ms.$big-radius;
   height: auto;
+  overflow: hidden;
 }
 
 .container_b2ce9c .membersWrap__90226, .membersWrap__90226 {
